# modorganizer-form43_checker

./: CMakeLists.txt  appveyor.yml  vcpkg.json
src/: CMakeLists.txt  Form43Checker.py  Form43Checker_en.ts  Form43PluginChecker_en.ts
